--- a/main page/index.html
+++ b/main page/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Header Section -->
 <header>
     <h1>Velkommen til Eventplanlægger</h1>
     <p>Opret og administrer dine events på én enkel platform</p>
@@ -15,7 +14,7 @@
     <button onclick="window.location.href='signup.html'">Opret Konto</button>
 </header>
 
-<!-- Navigation Bar -->
+
 <nav>
     <ul>
         <li><a href="#upcoming-events">Kommende Events</a></li>
@@ -25,20 +24,19 @@
     </ul>
 </nav>
 
-<!-- Main Section -->
+
 <main>
-    <!-- Upcoming Events Section -->
+    <!-- eksempel på kommende events -->
     <section id="upcoming-events">
         <h2>Kommende Events</h2>
         <div class="event-list">
-            <!-- Eksempel event -->
             <div class="event-card">
                 <h3>Sommerfest</h3>
                 <p><strong>Dato:</strong> 15. juli 2024</p>
                 <p><strong>Lokation:</strong> Strandvej 123, København</p>
                 <button onclick="window.location.href='event-details.html?event_id=1'">Se detaljer</button>
             </div>
-            <!-- Flere events kan genereres dynamisk her -->
+
         </div>
     </section>
 
@@ -65,20 +63,20 @@
         </form>
     </section>
 
-    <!-- About Section -->
+
     <section id="about">
         <h2>Om Os</h2>
         <p>Eventplanlægger er en platform designet til at gøre eventplanlægning enkel og overskuelig. Opret og administrer dine events, inviter gæster og hold styr på deltagelse.</p>
     </section>
 
-    <!-- Contact Section -->
+
     <section id="contact">
         <h2>Kontakt Os</h2>
-        <p>Har du spørgsmål? Kontakt os på <a href="mailto:support@eventplanlaegger.dk">support@eventplanlaegger.dk</a></p>
+        <p>Har du spørgsmål? Kontakt os på <a href="mailto:hey@med.dig">mailto:hey@med.dig</a></p>
     </section>
 </main>
 
-<!-- Footer Section -->
+
 <footer>
     <p>hey med dig :D</p>
 </footer>
