still doesnt work. updated html

--- a/main page/index.html
+++ b/main page/index.html
@@ -72,7 +72,7 @@
 </main>
 
 
-<<footer>
+<footer>
     <h2>Kontakt Os</h2>
     <p>Har du spørgsmål? Kontakt os på <a href="mailto:hey@med.dig">mailto:eventplanner@mail.dk</a></p>
     <p>Phone number: +4512345678</p>
