--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,6 +81,6 @@
     </div>
 </footer>
 <script src="main.js"></script>
-<script src="server.js"></script>
+<script src="../backend/server.js"></script>
 </body>
 </html>
