--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,7 +80,7 @@
         <p>SoMe: <a href="Eventplanner">Eventplanner</a></p>
     </div>
 </footer>
-<script src="main.js"></script>
+<script src="../frontend/main.js"></script>
 <script src="../backend/server.js"></script>
 </body>
 </html>
